# OS_scheduler

./: README.md
src/: FCFS.h  Priority.h  Process.cpp  Process.h  RR.h  SJF.h  ScheduleList.cpp  ScheduleList.h  Scheduler.cpp  Scheduler.h  TimeFrame.h
src/Scheduler_GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  processesmanager.cpp  processesmanager.cpp.crzyqd  processesmanager.h  scheduleviewer.cpp  scheduleviewer.h
